--- a/app/app.css
+++ b/app/app.css
@@ -399,3 +399,19 @@ i {
   justify-content: center;
   width: 100%;
 }
+
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.card {
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+}
