--- a/app/app.css
+++ b/app/app.css
@@ -319,56 +319,56 @@ i {
   margin: 1rem 0;
 }
 
-#contact-form {
+#task-form {
   display: flex;
   max-width: 40rem;
   flex-direction: column;
   gap: 1rem;
 }
-#contact-form > p:first-child {
+#task-form > p:first-child {
   margin: 0;
   padding: 0;
 }
-#contact-form > p:first-child > :nth-child(2) {
+#task-form > p:first-child > :nth-child(2) {
   margin-right: 1rem;
 }
-#contact-form > p:first-child,
-#contact-form label {
+#task-form > p:first-child,
+#task-form label {
   display: flex;
 }
-#contact-form p:first-child span,
-#contact-form label span {
+#task-form p:first-child span,
+#task-form label span {
   width: 8rem;
 }
-#contact-form p:first-child input,
-#contact-form label input,
-#contact-form label textarea {
+#task-form p:first-child input,
+#task-form label input,
+#task-form label textarea {
   flex-grow: 2;
 }
 
-#contact-form-avatar {
+#task-form-avatar {
   margin-right: 2rem;
 }
 
-#contact-form-avatar img {
+#task-form-avatar img {
   width: 12rem;
   height: 12rem;
   background: hsla(0, 0%, 0%, 0.2);
   border-radius: 1rem;
 }
 
-#contact-form-avatar input {
+#task-form-avatar input {
   box-sizing: border-box;
   width: 100%;
 }
 
-#contact-form p:last-child {
+#task-form p:last-child {
   display: flex;
   gap: 0.5rem;
   margin: 0 0 0 8rem;
 }
 
-#contact-form p:last-child button[type="button"] {
+#task-form p:last-child button[type="button"] {
   color: inherit;
 }
 
