task name modified

--- a/app/app.css
+++ b/app/app.css
@@ -60,27 +60,27 @@ button:active {
   transform: translateY(1px);
 }
 
-#contact h1 {
+#task h1 {
   display: flex;
   align-items: flex-start;
   gap: 1rem;
 }
-#contact h1 form {
+#task h1 form {
   display: flex;
   align-items: center;
   margin-top: 0.25rem;
 }
-#contact h1 form button {
+#task h1 form button {
   box-shadow: none;
   font-size: 1.5rem;
   font-weight: 400;
   padding: 0;
 }
-#contact h1 form button[value="true"] {
+#task h1 form button[value="true"] {
   color: #a4a4a4;
 }
-#contact h1 form button[value="true"]:hover,
-#contact h1 form button[value="false"] {
+#task h1 form button[value="true"]:hover,
+#task h1 form button[value="false"] {
   color: #eeb004;
 }
 
@@ -269,42 +269,42 @@ i {
   transition-delay: 200ms;
 }
 
-#contact {
+#task {
   max-width: 40rem;
   display: flex;
 }
 
-#contact h1 {
+#task h1 {
   font-size: 2rem;
   font-weight: 700;
   margin: 0;
   line-height: 1.2;
 }
 
-#contact h1 + p {
+#task h1 + p {
   margin: 0;
 }
 
-#contact h1 + p + p {
+#task h1 + p + p {
   white-space: break-spaces;
 }
 
-#contact h1:focus {
+#task h1:focus {
   outline: none;
   color: hsl(224, 98%, 58%);
 }
 
-#contact a[href*="twitter"] {
+#task a[href*="twitter"] {
   display: flex;
   font-size: 1.5rem;
   color: #3992ff;
   text-decoration: none;
 }
-#contact a[href*="twitter"]:hover {
+#task a[href*="twitter"]:hover {
   text-decoration: underline;
 }
 
-#contact img {
+#task img {
   width: 12rem;
   height: 12rem;
   background: #c8c8c8;
@@ -313,7 +313,7 @@ i {
   object-fit: cover;
 }
 
-#contact h1 ~ div {
+#task h1 ~ div {
   display: flex;
   gap: 0.5rem;
   margin: 1rem 0;
